# rss-watcher

./: Cargo.toml  test-file
.github/workflows/: rust.yml
mover/: config.json
src/: main.rs
src/config/: mod.rs  path_functions.rs  types.rs
src/datastore/: client.rs
src/rpc/: client.rs  methods.rs  mod.rs
src/rss/: client.rs
