[package]
name = "test-file"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
rss = "2.0.9"
openssl = { version = "0.10.70", features = ["vendored"] }
notify = "7.0"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
anyhow = "1.0.89"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
